[package]
name = "webscan"
version = "0.2.0"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2018"
description = "Cross-platform web scan library"
repository = "https://github.com/shellrow/webscan"
readme = "README.md"
keywords = ["web","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
reqwest = "0.10"
dns-lookup = "0.9"
tokio = {version = "0.2", features = ["time"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
