[package]
name = "webscan"
version = "0.3.0"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2018"
description = "Cross-platform web scan library"
repository = "https://github.com/shellrow/webscan"
readme = "README.md"
keywords = ["web","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
reqwest = "0.10"
dns-lookup = "0.9"
tokio = {version = "0.2", features = ["time"] }

## Static build
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
[target.'cfg(not(windows))'.dependencies]
openssl-sys = "0.9"

[target.'cfg(linux)'.dependencies]
[features]
# Force openssl-sys to staticly link in the openssl library.
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
